fixed aligning of item

--- a/src/components/intro/Intro.scss
+++ b/src/components/intro/Intro.scss
@@ -51,8 +51,8 @@
   .indicator {
     text-align: center;
     position: absolute;
-    bottom: 10px;
-    left: 50%;
+    bottom: 0;
+    left: 46.5%;
     transform: translateX(-50%);
 
     animation: bounce 3s infinite;
@@ -93,11 +93,11 @@
       }
 
       &::before {
-        transform: rotate(30deg) translateX(0.05rem) translateY(-1.2rem);
+        transform: rotate(30deg) translateX(0.1rem) translateY(-1.2rem);
         margin-right: auto;
       }
       &::after {
-        transform: rotate(330deg) translateX(-0.05rem) translateY(-1.35rem);
+        transform: rotate(330deg) translateX(-0.1rem) translateY(-1.35rem);
         margin-left: auto;
       }
     }
